added the open source github

--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
         >
           Paula Valle
         </a>
+
+        <a
+          href="https://github.com/PaulaValle/paulavalleweatherappshecodes"
+          target="_blank"
+        >
+          Open source
+        </a>
       </footer>
     </div>
     <script src="src/weatherappscript.js"></script>
