add description of the weather

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <br />
             <span id="date-month"> Monday (i), Monthday </span>
             <br />
-            <span class="smaller" id="second-grade-info"> Other info </span>
+            <span class="smaller" id="description"> Other info </span>
           </p>
         </section>
         <section class="firstgradeinfo temperature">
