add the icon functional

--- a/index.html
+++ b/index.html
@@ -53,7 +53,13 @@
             >
           </p>
         </section>
-        <section class="todayicon firstgradeinfo" id="big-icon">🌞</section>
+        <section class="todayicon firstgradeinfo">
+          <img
+            src="https://openweathermap.org/img/wn/01d@2x.png"
+            id="big-icon"
+            alt="Clear sky"
+          />
+        </section>
       </div>
       <!-- separación -->
       <hr class="spacing" />
@@ -63,7 +69,13 @@
           <p>
             Weekday
             <br />
-            <span> 🌞 </span>
+            <span>
+              <img
+                src="https://openweathermap.org/img/wn/01d@2x.png"
+                id="icon"
+                alt="Clear sky"
+              />
+            </span>
             <br />
             5º/ 25º
           </p>
@@ -72,7 +84,13 @@
           <p>
             Weekday
             <br />
-            <span> 🌞 </span>
+            <span>
+              <img
+                src="https://openweathermap.org/img/wn/01d@2x.png"
+                id="icon"
+                alt="Clear sky"
+              />
+            </span>
             <br />
             5º/ 25º
           </p>
@@ -81,7 +99,13 @@
           <p>
             Weekday
             <br />
-            <span> 🌞 </span>
+            <span>
+              <img
+                src="https://openweathermap.org/img/wn/01d@2x.png"
+                id="icon"
+                alt="Clear sky"
+              />
+            </span>
             <br />
             5º/ 25º
           </p>
@@ -90,7 +114,13 @@
           <p>
             Weekday
             <br />
-            <span> 🌞 </span>
+            <span>
+              <img
+                src="https://openweathermap.org/img/wn/01d@2x.png"
+                id="icon"
+                alt="Clear sky"
+              />
+            </span>
             <br />
             5º/ 25º
           </p>
