buttons active add and remove (still not work the conversion)

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </form>
       <!-- botones grados -->
       <div>
-        <button class="celsius" id="celsius-button" autofocus>Cº</button>
+        <button class="celsius active" id="celsius-button">Cº</button>
         <button class="farenheit" id="farenheit-button">Fº</button>
       </div>
       <!-- información 1º grado -->
