added wind speed

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
             <br />
             <span id="date-month"> Monday (i), Monthday </span>
             <br />
+            <span class="smaller">Wind speed: </span
+            ><span class="smaller" id="wind">20 km/h</span>
+            <br />
             <span class="smaller" id="description"> Other info </span>
           </p>
         </section>
