forecast prepared html

--- a/index.html
+++ b/index.html
@@ -69,64 +69,22 @@
       <!-- días de la semana -->
       <div id="spacing">
         <section id="littlecontainer" class="weekdays">
-          <p>
-            Weekday
-            <br />
-            <span>
-              <img
-                src="https://openweathermap.org/img/wn/01d@2x.png"
-                id="icon"
-                alt="Clear sky"
-              />
-            </span>
-            <br />
-            5º/ 25º
-          </p>
-        </section>
-        <section id="littlecontainer">
-          <p>
-            Weekday
-            <br />
-            <span>
-              <img
-                src="https://openweathermap.org/img/wn/01d@2x.png"
-                id="icon"
-                alt="Clear sky"
-              />
-            </span>
-            <br />
-            5º/ 25º
-          </p>
-        </section>
-        <section id="littlecontainer">
-          <p>
-            Weekday
-            <br />
-            <span>
-              <img
-                src="https://openweathermap.org/img/wn/01d@2x.png"
-                id="icon"
-                alt="Clear sky"
-              />
-            </span>
-            <br />
-            5º/ 25º
-          </p>
-        </section>
-        <section id="littlecontainer">
-          <p>
-            Weekday
-            <br />
-            <span>
-              <img
-                src="https://openweathermap.org/img/wn/01d@2x.png"
-                id="icon"
-                alt="Clear sky"
-              />
-            </span>
-            <br />
-            5º/ 25º
-          </p>
+          <div class="weather-forecast">
+            <div class="row">
+              <div class="col-2">
+                <div class="weather-day">Mon</div>
+                <img
+                  src="http://openweathermap.org/img/wn/50d@2x.png"
+                  alt=""
+                  width="50"
+                />
+                <div class="week-temperatures">
+                  <span class="weektemp-min"> 5° </span>
+                  <span class="weektemp-max"> 25° </span>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
     </div>
