--- a/index.html
+++ b/index.html
@@ -68,24 +68,7 @@
       <hr class="spacing" />
       <!-- días de la semana -->
       <div id="spacing">
-        <section id="littlecontainer" class="weekdays">
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-day">Mon</div>
-                <img
-                  src="http://openweathermap.org/img/wn/50d@2x.png"
-                  alt=""
-                  width="50"
-                />
-                <div class="week-temperatures">
-                  <span class="weektemp-min"> 5° </span>
-                  <span class="weektemp-max"> 25° </span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
+        <section id="forecast" class="weatherForecast"></section>
       </div>
     </div>
     <footer>
