--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <hr class="spacing" />
       <!-- días de la semana -->
       <div id="spacing">
-        <section id="forecast" class="weatherForecast"></section>
+        <section id="forecast"></section>
       </div>
     </div>
     <footer>
