removed the imperial conversion

--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
         <input type="button" value="Current" class="currentbutton col-2" />
       </form>
       <!-- botones grados -->
-      <div>
-        <button class="celsius active" id="celsius-button">Cº</button>
-        <button class="farenheit" id="farenheit-button">Fº</button>
-      </div>
+      <div>Celsius</div>
       <!-- información 1º grado -->
       <div>
         <section class="firstgradeinfo positionInfo">
