removed inperial from css and fixed html

--- a/index.html
+++ b/index.html
@@ -28,8 +28,6 @@
         <input type="submit" value="Search" class="searchbutton col-2" />
         <input type="button" value="Current" class="currentbutton col-2" />
       </form>
-      <!-- botones grados -->
-      <div>Celsius</div>
       <!-- información 1º grado -->
       <div>
         <section class="firstgradeinfo positionInfo">
@@ -41,7 +39,7 @@
             <span class="smaller">Wind speed: </span
             ><span class="smaller" id="wind">20 km/h</span>
             <br />
-            <span class="smaller" id="description"> Other info </span>
+            <span class="smaller" id="description"> Celsius </span>
           </p>
         </section>
         <section class="firstgradeinfo temperature">
